Test overflow and fix mistakes

--- a/src/styles/components/_blog-aside.scss
+++ b/src/styles/components/_blog-aside.scss
@@ -16,7 +16,7 @@
 
   &__author {
     display: inline-flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: $gap-base;
     align-items: center;
     margin-inline: $space-0;
