--- a/src/styles/layouts/_hero-section.scss
+++ b/src/styles/layouts/_hero-section.scss
@@ -105,16 +105,20 @@
 
   &__btn-wrapper {
     display: flex;
-    flex-wrap: nowrap;
-    flex-shrink: 1;
+    flex-wrap: wrap;
     gap: $gap-lg;
+
+    @include tablet {
+      flex-wrap: nowrap;
+    }
   }
 
   &__button-primary {
-    white-space: nowrap;
+    white-space: wrap;
+    padding-inline: 30px; /*it's a strange situation here, 440px cannot handle these sizes, along with white space wrap, the text breaks into 2 rows. Nowrap in the text makes the layout break and causes buttons to overflow and flex wrap in the wrapper makes buttons go vertically even in default size. I tried all options again and again. The only way to fit the 2 buttons there with white space wrap and staying loyal to figma layout, is to reduce a bit the horizontal padding of buttons in mobile view. If there is more practically solution, i'll be happy to know*/
 
     @include tablet {
-      white-space: wrap;
+      padding-inline: $space-xl;
     }
   }
 
@@ -122,12 +126,12 @@
     background-color: $color-white;
     color: $color-text-primary;
     padding-block: $space-ml;
-    padding-inline: $space-xl;
+    padding-inline: 30px;
     border: 1px solid transparent;
-    white-space: nowrap;
+    white-space: wrap;
 
     @include tablet {
-      white-space: wrap;
+      padding-inline: $space-xl;
     }
 
     &:hover {
@@ -156,5 +160,6 @@
     margin-right: $space-sm;
     color: $color-primary;
     fill: $color-primary;
+    flex-shrink: 0;
   }
 }
