--- a/src/styles/layouts/_product.scss
+++ b/src/styles/layouts/_product.scss
@@ -44,7 +44,7 @@
 
     @include desktop {
       width: unset;
-      min-width: 224px;
+      width: 224px;
     }
   }
 }
